--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin-bottom: 10%;
 }
 h1 {
     font-size: 4em;
@@ -25,5 +26,20 @@ h1 {
     border-radius: 20px;
 }
 .header-part img {
+    width: 100%;
+}
+
+
+#dream-area {
+    display: flex;
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.dream-area-part {
+    width: 50%;
+    padding-right: 5%;
+}
+.dream-area-part img {
     width: 100%;
 }
