--- a/style.css
+++ b/style.css
@@ -43,3 +43,34 @@ h1 {
 .dream-area-part img {
     width: 100%;
 }
+#experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    padding: 5%;
+}
+
+.experience-area-part {
+    display: flex;
+}
+.experience-area-part h3 {
+    color: orange;
+}
+.experience-area-part div {
+    box-shadow: 5px 7px 40px gray;
+    height: 80%;
+    margin: 15px;
+}
+.full-stack {
+    border: 7px solid;
+    border-image: linear-gradient(
+180deg,red,orange);
+    border-image-slice: 1;
+    padding: 10px;
+}
+.baby-stack {
+    border-left: 7px solid;
+    border-image: linear-gradient(
+180deg,cyan,black);
+    border-image-slice: 1;
+    padding: 10px;
+}
