--- a/style.css
+++ b/style.css
@@ -74,3 +74,15 @@ h1 {
     border-image-slice: 1;
     padding: 10px;
 }
+.footer {
+    display: flex;
+    height: 60px;
+    background-color: gray;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+footer p {
+    justify-content: center;
+    align-items: center;
+}
